# scrape-smith

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: cli.rst  conf.py  development.rst  index.rst  installation.rst  python-api.rst  quickstart.rst
docs/source/tools/: tables.rst
src/scrape_smith/: __init__.py  cli.py
src/scrape_smith/tools/: __init__.py  tables.py
tests/: test_cli.py  test_tables.py
