[project]
name = "scrape-smith"
version = "0.1.0"
description = "Small scraping utilities for CLI and Python workflows."
readme = "README.md"
authors = [
    { name = "Eiichi YAMAMOTO", email = "info@yeiichi.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/yeiichi/scrape-smith"
Documentation = "https://scrape-smith.readthedocs.io/"
Repository = "https://github.com/yeiichi/scrape-smith"
Issues = "https://github.com/yeiichi/scrape-smith/issues"

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
    "pytest>=8.0",
    "scrape-smith",
]

[project.scripts]
scrape = "scrape_smith.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
scrape-smith = { workspace = true, editable = true }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/scrape_smith/__init__.py:__version__"]
tag_format = "v{version}"
allow_zero_version = true
